Updating files up to HW09.

--- a/HW05_Ta_Kevin.ipynb
+++ b/HW05_Ta_Kevin.ipynb
@@ -600,15 +600,21 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'xgboost'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-8-9fe2d4cc1c50>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Step 1. In both samples, use xgboost regressor to predict log wages (outcome Y)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# use early stopping.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mxgboost\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mXGBRegressor\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m a_xgbr = XGBRegressor(objective ='reg:squarederror', \n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'xgboost'"
-     ]
+     "data": {
+      "text/plain": [
+       "XGBRegressor(alpha=10, base_score=0.5, booster='gbtree', colsample_bylevel=1,\n",
+       "             colsample_bynode=1, colsample_bytree=0.3, gamma=0, gpu_id=-1,\n",
+       "             importance_type='gain', interaction_constraints='',\n",
+       "             learning_rate=0.1, max_delta_step=0, max_depth=5,\n",
+       "             min_child_weight=1, missing=nan, monotone_constraints='()',\n",
+       "             n_estimators=10, n_jobs=0, num_parallel_tree=1, random_state=0,\n",
+       "             reg_alpha=10, reg_lambda=1, scale_pos_weight=1, subsample=1,\n",
+       "             tree_method='exact', validate_parameters=1, verbosity=None)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -635,9 +641,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[14:54:36] WARNING: C:\\Users\\Administrator\\workspace\\xgboost-win64_release_1.2.0\\src\\learner.cc:516: \n",
+      "Parameters: { early_stopping_rounds, eval_set } might not be used.\n",
+      "\n",
+      "  This may not be accurate due to some parameters are only used in language bindings but\n",
+      "  passed down to XGBoost core.  Or some parameters are not used but slip through this\n",
+      "  verification. Please open an issue if you find above cases.\n",
+      "\n",
+      "\n",
+      "[14:54:36] WARNING: C:\\Users\\Administrator\\workspace\\xgboost-win64_release_1.2.0\\src\\learner.cc:516: \n",
+      "Parameters: { early_stopping_rounds, eval_set } might not be used.\n",
+      "\n",
+      "  This may not be accurate due to some parameters are only used in language bindings but\n",
+      "  passed down to XGBoost core.  Or some parameters are not used but slip through this\n",
+      "  verification. Please open an issue if you find above cases.\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "XGBClassifier(base_score=0.5, booster='gbtree', colsample_bylevel=1,\n",
+       "              colsample_bynode=1, colsample_bytree=1, early_stopping_rounds=10,\n",
+       "              eval_set=[        age  year  race  msp  nev_mar  grade  not_smsa  south  wks_ue  \\\n",
+       "4110   35.0    78     2  0.0      0.0   10.0       0.0    0.0     0.0   \n",
+       "22947  38.0    87     1  1.0      0.0   10.0       1.0    0.0     0.0   \n",
+       "2038   25.0    70     1  1.0      0.0   10.0       0.0    0.0     0.0   \n",
+       "5484   29.0    72     1  1.0      0.0   13.0       0.0    0.0     0.0   \n",
+       "2413   25.0    73     1  0.0      1.0   12.0       0.0    0.0     0.0   \n",
+       "...     ...   ...   ...  .....\n",
+       "              gamma=0, gpu_id=-1, importance_type='gain',\n",
+       "              interaction_constraints='', learning_rate=0.300000012,\n",
+       "              max_delta_step=0, max_depth=6, min_child_weight=1, missing=nan,\n",
+       "              monotone_constraints='()', n_estimators=100, n_jobs=0,\n",
+       "              num_parallel_tree=1, random_state=349856, reg_alpha=0,\n",
+       "              reg_lambda=1, scale_pos_weight=1, subsample=1,\n",
+       "              tree_method='exact', validate_parameters=1, verbosity=None)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Step 2. In both samples, use xgboost classifier to predict union status (treatment D)\n",
     "# use early stopping.\n",
@@ -652,9 +706,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7649420160570919\n",
+      "0.75973832887303\n"
+     ]
+    }
+   ],
    "source": [
     "# Step 3. Cross-fitting: Form predictions in other sample.\n",
     "\n",
@@ -680,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,9 +760,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: statsmodels in c:\\users\\kevin\\anaconda3\\lib\\site-packages (0.12.0)\n",
+      "Requirement already satisfied: numpy>=1.15 in c:\\users\\kevin\\anaconda3\\lib\\site-packages (from statsmodels) (1.19.2)\n",
+      "Requirement already satisfied: scipy>=1.1 in c:\\users\\kevin\\anaconda3\\lib\\site-packages (from statsmodels) (1.5.2)\n",
+      "Requirement already satisfied: pandas>=0.21 in c:\\users\\kevin\\anaconda3\\lib\\site-packages (from statsmodels) (1.1.3)\n",
+      "Requirement already satisfied: patsy>=0.5 in c:\\users\\kevin\\anaconda3\\lib\\site-packages (from statsmodels) (0.5.1)\n",
+      "Requirement already satisfied: python-dateutil>=2.7.3 in c:\\users\\kevin\\anaconda3\\lib\\site-packages (from pandas>=0.21->statsmodels) (2.8.1)\n",
+      "Requirement already satisfied: pytz>=2017.2 in c:\\users\\kevin\\anaconda3\\lib\\site-packages (from pandas>=0.21->statsmodels) (2020.1)\n",
+      "Requirement already satisfied: six in c:\\users\\kevin\\anaconda3\\lib\\site-packages (from patsy>=0.5->statsmodels) (1.15.0)\n"
+     ]
+    }
+   ],
    "source": [
     "# as a shortcut, use statsmodels.\n",
     "# for projects (not homework), we would do this in stata.\n",
@@ -708,9 +786,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DML Coeff: union    0.351685\n",
+      "dtype: float64\n",
+      "DML S.E.: union    0.014884\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
     "# Step 4. Run OLS regressions and produce DML estimate\n",
     "\n",
